redis/service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: redis
  labels:
    app: redis
spec:
  ports:
    # The port number to expose the service
    - protocol: TCP
      port: 6379
      name: redis-backend
    - protocol: TCP
      port: 8001
      name: redis-manager

  # Pod to route service traffic
  selector:
    app: redis
